cursive-bootstrap/tests/ui/E-CON/E-CON-0002.cursive
// RUN: compile-fail
// DIAG: E-CON-0002
// SPEC: 8.9
// DESC: # annotation on non-shared path

record Counter {
    value: i32
}

procedure annotate_non_shared(c: const Counter) -> i32 {
    return #c.value  //~ ERROR E-CON-0002: # on non-shared path
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
